# AgentGuard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentguard/: __init__.py  guard.py  results.py  rules.py
docs/: architecture.md
scripts/: bump-version.sh  regression.sh
tests/: test_guard.py
