[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentguard"
version = "0.1.0"
description = "Production-grade safety guardrails for LLM agents — injection detection, PII redaction, tool governance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Naveen Kumar Baskaran", email = "naveen.baskaran@sap.com"},
]
keywords = ["llm", "guardrails", "safety", "security", "prompt-injection", "pii", "ai-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/AgentGuard"
Documentation = "https://github.com/naveenkumarbaskaran/AgentGuard/blob/main/docs/architecture.md"
Repository = "https://github.com/naveenkumarbaskaran/AgentGuard"
Issues = "https://github.com/naveenkumarbaskaran/AgentGuard/issues"
